Created dashboard website adding connect middleware

--- a/samples/socket/dashboard/public/socketclient.html
+++ b/samples/socket/dashboard/public/socketclient.html
@@ -49,11 +49,11 @@
       <section class="subscriptionCount">8</section>
     </div>
   </div>
-  <script src="jquery.min.js"></script>
-  <script src="jquery.caruso.text.js"></script>
-  <script src="jquery.caruso.injector.js"></script>
+  <script src="script/jquery.min.js"></script>
+  <script src="script/jquery.caruso.text.js"></script>
+  <script src="script/jquery.caruso.injector.js"></script>
   <script src="socket.io/socket.io.js"></script>
-  <script src="eventedsocket.js"></script>
+  <script src="script/eventedsocket.js"></script>
   <script>
     var socket = new io.Socket('localhost'), 
         $template = $('#template').children(),
