--- a/samples/socket/dashboard/public/index.html
+++ b/samples/socket/dashboard/public/index.html
@@ -85,6 +85,7 @@
   </header>
   
   <section class="mod"></section>
+  <section id="allMessages"></section>
 
   <div id="template" style="display:none">
     <div class="bus">
@@ -95,6 +96,12 @@
     </div>
   </div>
 
+  <div id="allMessagesTemplate">
+    <section class="message">
+      <h1 class="evt"></h1>
+      <h2 class="id"></h2>
+    </section>
+  </div>
 
   <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
@@ -103,32 +110,26 @@
   <script src="js/jquery.caruso.text.js"></script>
   <script src="js/jquery.caruso.injector.js"></script>
   <script src="socket.io/socket.io.js"></script>
-  <script src="js/eventedsocket.js"></script>
   <script>
     var socket = new io.Socket('localhost'), 
         $template = $('#template').children(),
-        $container = $('section.mod');
+        $container = $('section.mod'),
+        handlers = {};
 
-    socket.on('connect', function() {
-      console.log('connected');
-      var eClient = evented.client(socket);
-      
-      eClient.on('bus:ready', function(msg) {
-        var $bus = $template.clone().inject(msg).hide();
-        $container.append($bus);
-        $bus.show(500);
-      });
+    handlers['bus:ready'] = function(msg) {
+      var $bus = $template.clone().inject(msg).hide();
+      $container.append($bus);
+      $bus.show(500);
+    };
 
-      eClient.on('bus:exited', function(msg) {
-        $('.bus input[value=' + msg.id + ']').parent().addClass('inactive');
-      });
-    });
-
-    socket.on('message', function(msg) {
-      $('body').append('<p>' + JSON.stringify(msg) + '</p>');
-      $('body').append($('<p></p>').text(msg.Subscriber));
-    });
+    handlers['bus:exited'] = function(msg) {
+      $('.bus input[value=' + msg.id + ']').parent().addClass('inactive');
+    };
     
+    socket.on('message', function(msg) {
+      $('#allMessages').prepend($('#allMessagesTemplate').children().clone().inject(msg));
+    });
+
     socket.on('disconnect', function() {
       console.log('disconnect');
     });
