--- a/samples/socket/dashboard/public/index.html
+++ b/samples/socket/dashboard/public/index.html
@@ -103,6 +103,7 @@
     </section>
   </div>
 
+  <script src="js/es5-shim.js"></script>
   <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="js/jquery.min.js"%3E%3C/script%3E'))</script>
