--- a/samples/socket/dashboard/public/index.html
+++ b/samples/socket/dashboard/public/index.html
@@ -94,7 +94,6 @@
       <div class="queueName"></div>
       <div class="hostName"></div>
       <section class="subscriptionCount"></section>
-      <input type="hidden" class="id">
     </div>
   </div>
 
@@ -174,7 +173,7 @@
       };
 
       pubsub.subscribe('bus:exited', function(msg) {
-        $('.bus input[value=' + msg.id + ']').parent().addClass('inactive');
+        busses[msg.id].$ele.addClass('inactive');
       });
       
       pubsub.subscribe('bus:ready', function(msg) {
